# nonebot-plugin-cfr2

./: README.md  pyproject.toml
nonebot_plugin_cfr2/: __init__.py  config.py
